# mySLAM

./: LoadSR.m  README.md  data.txt  data0.txt  data1.txt  data2.txt  data3.txt  dataOpt.txt  dataOpt1.txt  dataOptend.txt  data_Opt.txt  data_Opt_bkp.txt  data_dead.txt  data_lp.txt  data_noOpt.txt  matlab.mat  noOpt.fig  plotTraj.m  testJacobian.m  untitled.fig
include/: monoPC.cpp  optimizeG2O.h  pose_estimation.h  slamBase.h
src/: CMakeLists.txt  monoPC.cpp  mySLAM.cpp  optimizeG2O.cpp  pose_estimation.cpp  slamBase.cpp  testT.cpp
